--- a/index.html
+++ b/index.html
@@ -983,7 +983,7 @@
 								<a href="#"><i class="icon-dribbble2"></i></a>
 								<a href="#"><i class="icon-youtube"></i></a>
 							</p>
-							<p>Copyright 2023 @  <a href="#">GLUONIT</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://freehtml5.co/" target="_blank">GLUONIT</a> <a href="https://unsplash.com/" target="_blank">Unsplash</a> &amp; <a href="http://blog.gessato.com/" target="_blank">Gessato</a></p>
+							<p>Copyright 2023 @  <a href="#">GLUONIT</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://gluon-it.com/" target="_blank">GLUONIT</a> <a href="https://gluon-it.com/" target="_blank">Software</a> &amp; <a href="http://gluon-it.com/" target="_blank">Team Development</a></p>
 						</div>
 					</div>
 				</div>
