--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<!-- <title>Homestate &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title> -->
 	<title>Istana Genteng</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
+	<meta name="description" content="Istana Genteng" />
 	<meta name="keywords" content="supplier genteng,supplier murah,istana genteng" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="author" content="GluonIT Software House" />
 
   <!-- 
 	//////////////////////////////////////////////////////
