--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
-
+	<meta name="google-site-verification" content="nawl152YI-c0SQNnRgPDf38EPWtHLYhjFearypEg3lA" />
 	</head>
 	<body>
 		<div id="fh5co-wrapper">
