--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 	<meta name="google-site-verification" content="nawl152YI-c0SQNnRgPDf38EPWtHLYhjFearypEg3lA" />
+	<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-KG5NXSJ6');</script>
+	<!-- End Google Tag Manager -->
 	</head>
 	<body>
 		<div id="fh5co-wrapper">
@@ -968,11 +975,7 @@
 								<a href="#"><i class="icon-dribbble2"></i></a>
 								<a href="#"><i class="icon-youtube"></i></a>
 							</p>
-<<<<<<< HEAD
 							<p>Copyright 2023 @  <a href="#">GLUONIT</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://gluon-it.com/" target="_blank">GLUONIT</a> <a href="https://gluon-it.com/" target="_blank">Software</a> &amp; <a href="http://gluon-it.com/" target="_blank">Team Development</a></p>
-=======
-							<p>Copyright 2023 @  <a href="#">GLUONIT</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://freehtml5.co/" target="_blank">IT Team GluonIT</a> <a href="https://gluon-it.com" target="_blank">Development</a> &amp; <a href="http://blog.gessato.com/" target="_blank">Software</a></p>
->>>>>>> master
 						</div>
 					</div>
 				</div>
@@ -1012,7 +1015,10 @@
 	
 	<!-- Main JS -->
 	<script src="js/main.js"></script>
-
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KG5NXSJ6"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 	</body>
 </html>
 
