--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 	})(window,document,'script','dataLayer','GTM-KG5NXSJ6');</script>
 	<!-- End Google Tag Manager -->
 
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-FB0NSHESMJ"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-FB0NSHESMJ');
+	</script>
+
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Istana Genteng</title>
