--- a/index.html
+++ b/index.html
@@ -565,6 +565,56 @@
 							</div>
 						</a>
 					</div>
+
+
+					<div class="col-md-4 animate-box">
+						<a href="#" class="fh5co-property" style="background-image: url(images/galeri/Wuwug\ Jowo\ Cantik.jpg);">
+							<span class="status">Produk</span>
+							<div class="prop-details">
+								<!-- <span class="price">$3,000</span> -->
+								<!-- <h3>Bonggalo House</h3> -->
+							</div>
+						</a>
+					</div>
+
+
+					<div class="col-md-4 animate-box">
+						<a href="#" class="fh5co-property" style="background-image: url(images/galeri/Genteng\ Sirap\ Lancip.jpg);">
+							<span class="status">Produk</span>
+							<div class="prop-details">
+								<!-- <span class="price">$3,000</span> -->
+								<!-- <h3>Bonggalo House</h3> -->
+							</div>
+						</a>
+					</div>
+
+
+					<div class="col-md-4 animate-box">
+						<a href="#" class="fh5co-property" style="background-image: url(images/galeri/Wuwug\ Antik\ Mahkota.jpg);">
+							<span class="status">Produk</span>
+							<div class="prop-details">
+								<!-- <span class="price">$3,000</span> -->
+								<!-- <h3>Bonggalo House</h3> -->
+							</div>
+						</a>
+					</div>
+
+
+					<div class="col-md-4 animate-box">
+						<a href="#" class="fh5co-property" style="background-image: url(images/galeri/Aksesoris\ Wuwug\ Cantik.jpg);">
+							<span class="status">Produk</span>
+							<div class="prop-details">
+								<!-- <span class="price">$3,000</span> -->
+								<!-- <h3>Bonggalo House</h3> -->
+							</div>
+						</a>
+					</div>
+
+
+
+
+
+
 				</div>
 				<!-- <div class="row">
 					<div class="col-md-4 animate-box">
