--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<title>Istana Genteng</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Istana Genteng" />
-	<meta name="keywords" content="supplier genteng,supplier murah,istana genteng" />
+	<meta name="keywords" content="supplier genteng,supplier murah,istana genteng, Istana Genteng jepara , supplier genteng jawa, supplier Istana genteng" />
 	<meta name="author" content="Istana Genteng" />
 
 
