--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<!-- <link rel="shortcut icon" href="favicon.ico"> -->
-	<link rel="icon" href="/images/logo.png">
+	<link rel="icon" href="images/logo.png">
 
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,300' rel='stylesheet' type='text/css'>
 	
