--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Istana Genteng</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Istana Genteng" />
+	<meta name="description" content="Distributor Genteng Jepara Istana Genteng" />
 	<meta name="keywords" content="supplier genteng,supplier murah,istana genteng, Istana Genteng jepara , supplier genteng jawa, supplier Istana genteng" />
 	<meta name="author" content="Istana Genteng" />
 
