--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<h1 id="fh5co-logo">
 						<!-- <i> -->
 							<a href="index.html">
-								<img src="images/logo2.png" style="width: 100px;height:30px;margin-top:-6px;">	
+								<img src="images/logo2.png"  alt="Distributor Genteng Jepara" style="width: 100px;height:30px;margin-top:-6px;">	
 							</a>
 						<!-- </i> -->
 						<!-- <a>Istana<span>Genteng</span> -->
@@ -350,7 +350,7 @@
 						<div class="feature-left">
 							<span class="icon">
 								<!-- <i class="icon-map"></i> -->
-								<i><img src="images/icons/rome.png">
+								<i><img src="images/icons/rome.png"  alt="Supplier Genteng Jepara">
 								</i>
 							</span>
 							<div class="feature-copy">
@@ -365,7 +365,7 @@
 					<div class="col-md-4 animate-box">
 						<div class="feature-left">
 							<span class="icon">
-								<i><img src="images/icons/apachenetbeanside.png">
+								<i><img src="images/icons/apachenetbeanside.png"  alt="Supplier Genteng">
 								</i>
 								<!-- <i class="icon-browser"></i> -->
 							</span>
@@ -379,7 +379,7 @@
 					<div class="col-md-4 animate-box">
 						<div class="feature-left">
 							<span class="icon">
-								<i><img src="images/icons/handshake.png">
+								<i><img src="images/icons/handshake.png"  alt="Distributor Genteng">
 								</i>
 								<!-- <i class="icon-browser"></i> -->
 							</span>
