--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
 	<meta name="keywords" content="supplier genteng,supplier murah,istana genteng, Istana Genteng jepara , supplier genteng jawa, supplier Istana genteng" />
 	<meta name="author" content="Istana Genteng" />
 
+	<meta property="og:title" content="Distributor Genteng Jepara">
+	<meta name="og:description" content="Menjual aneka produk genteng asli Jepara" />
+	<meta name="og:url" content="https://istanagenteng.com" />
+	<meta name = "og:site_name" content="Istana Genteng"
+
+
+
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -68,6 +75,8 @@
 	<link rel="stylesheet" href="css/cs-skin-border.css">
 	
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="canonical" href="https://istanagenteng.com" />
+
 
 	<!-- Modernizr JS -->
 	<script src="js/font.js"></script>
