--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 								<div class="slider-text-inner">
 									<div class="desc">
 										<span class="status">Produksi</span>
-										<h1>HOME INDUSTRI, JEPARA INDONESIA</h1>
+										<h1>SUPPLIER GENTENG JEPARA</h1>
 										 <h2 class="price">Istana Genteng</h2>
 										 <p>Supplier Genteng Berkualitas Premium</p>
 										 <p class="details">
@@ -199,7 +199,7 @@
 								<div class="slider-text-inner">
 									<div class="desc">
 										<span class="status">Produksi</span>
-										<h1>HOME INDUSTRI, JEPARA INDONESIA</h1>
+										<h1>KUALITAS GENTENG TERBAIK JEPARA</h1>
 										 <h2 class="price">Istana Genteng</h2>
 										 <p>Supplier Genteng Berkualitas Premium</p>
 										 <p class="details">
